--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,30 @@
   <artifactId>uuid-maven-plugin</artifactId>
   <packaging>maven-plugin</packaging>
   <version>1.0.0-SNAPSHOT</version>
-  <name>A simple maven plugin for producing a UUID as a build property</name>
-  <url>http://maven.apache.org</url>
+  <name>${project.artifactId}</name>
+  <description>
+    A Maven plugin that produces a UUID.
+  </description>
+  <url>https://github.com/soulwing/${project.artifactId}</url>
+  <licenses>
+    <license>
+      <name>Apache License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+    <developer>
+      <name>Carl Harris</name>
+      <organization>Soulwing</organization>
+      <organizationUrl>https://github.com/soulwing</organizationUrl>
+    </developer>
+  </developers>
+  <scm>
+    <connection>scm:git:git@github.com:soulwing/${project.artifactId}.git</connection>
+    <developerConnection>${project.scm.connection}</developerConnection>
+    <url>git@github.com:soulwing/${project.artifactId}.git</url>
+    <tag>HEAD</tag>
+  </scm>
   <build>
     <plugins>
       <plugin>
