--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
       <distribution>repo</distribution>
     </license>
   </licenses>
+  <developers>
     <developer>
       <name>Carl Harris</name>
       <organization>Soulwing</organization>
