--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   </parent>
   <artifactId>uuid-maven-plugin</artifactId>
   <packaging>maven-plugin</packaging>
-  <version>1.0.0</version>
+  <version>1.1.0-SNAPSHOT</version>
   <name>${project.artifactId}</name>
   <description>
     A Maven plugin that produces a UUID.
@@ -31,7 +31,7 @@
     <connection>scm:git:git@github.com:soulwing/${project.artifactId}.git</connection>
     <developerConnection>${project.scm.connection}</developerConnection>
     <url>git@github.com:soulwing/${project.artifactId}.git</url>
-    <tag>1.0.0</tag>
+    <tag>HEAD</tag>
   </scm>
   <build>
     <plugins>
